--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light customNav">
+    <nav class="navbar navbar-expand-lg navbar-light customNav">
         <a class="navbar-brand" href="#">Francesca Snatt</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -48,7 +48,7 @@
         </div>
     </div>
 
-    <!-- project cards -->
+    <!-- projects section -->
 <div class="container-fluid">
     <div class="row">
         <div class="cardContainer col-lg-4 col-md-4 col-sm-12" id="project1">
@@ -80,7 +80,7 @@
     </div>
 </div>
 
-<!-- skills cards -->
+<!-- skills section -->
 <div class="container-fluid">
     <div class="row">
         <div class="cardContainer col-lg-6 col-md-6 col-sm-12">
@@ -103,7 +103,7 @@
     </div>
 </div>
 
-<!-- about me cards -->
+<!-- about/contact me section -->
 <div class="container-fluid">
     <div class="row">
         <div class="cardContainer col-lg-6 col-md-6 col-sm-12">
