--- a/index.html
+++ b/index.html
@@ -49,26 +49,16 @@
 <div class="container-fluid">
     <div class="row">
         <a href="#" class="cardContainer col-lg-4 col-md-4 col-sm-12" id="project1">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="./Images/SacredHeartTattoos.png" class="card-img-top" alt="...">
         </a>
     
-          <div class="cardContainer col-lg-4 col-md-4 col-sm-12" id="project2">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
+        <a href="#" class="cardContainer col-lg-4 col-md-4 col-sm-12" id="project2">
+            <img src="./Images/SacredHeartTattoos.png" class="card-img-top" alt="...">
+        </a>
     
-          <div class="cardContainer col-lg-4 col-md-4 col-sm-12" id="project3">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
+        <a href="#" class="cardContainer col-lg-4 col-md-4 col-sm-12" id="project3">
+            <img src="./Images/SacredHeartTattoos.png" class="card-img-top" alt="...">
+        </a>
     </div>
 </div>
 
