added emojis to cards

--- a/index.html
+++ b/index.html
@@ -70,14 +70,18 @@
         <div class="cardContainer col-lg-5 col-md-5 col-sm-10 skillsCard">
             <div class="card-body">
               <h2>Hard Skills</h2>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">HTML&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🔴🔴🔴🔴⚪</p>
+              <p class="card-text">CSS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;🔴🔴🔴⚪⚪</p>
+              <p class="card-text">Javascript 🔴🔴🔴⚪⚪</p>
             </div>
         </div>
     
         <div class="cardContainer col-lg-5 col-md-5 col-sm-10 skillsCard">
             <div class="card-body">
               <h2>Soft Skills</h2>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Collaboration 🔴🔴🔴🔴🔴</p>
+              <p class="card-text">Emotional resilience 🔴🔴🔴🔴⚪</p>
+              <p class="card-text">Growth mindset 🔴🔴🔴🔴🔴</p>
             </div>
         </div>
     </div>
@@ -110,7 +114,7 @@
                 <a href="#" class="btn" role="button">CV</a>
             </li>
             <li class="nav-item">
-                <a href="#">
+                <a href="https://www.linkedin.com/in/francescasnatt404/" target="_blank">
                     <img src="./Images/VectorLinkedinLogo.png" class="linkedin" alt="Linkedin logo">
                 </a>
             </li>
