navbar anchor links - not working

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Projects</a>
+              <a class="nav-link text-white" href="#projects-header">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Skills</a>
+              <a class="nav-link text-white" href="#skills-header">Skills</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" href="#">About</a>
+                <a class="nav-link text-white" href="#about-header">About</a>
             </li>
           </ul>
           <a href="#" class="btn btn-lg navCTA classes" role="button">Contact me</a>
@@ -63,7 +63,9 @@
 
     <!-- projects section -->
 <div class="container-fluid">
+  <div id="projects-header">
   <h2 class="projectsHeader">Projects</h2>
+  </div>
     <div class="row projectsRow">
         <a href="#" class="cardContainer col-lg-4 col-md-4 col-sm-12" id="project1">
             <img src="./Images/SacredHeartTattoos.png" class="card-img-top" alt="...">
@@ -85,7 +87,9 @@
         <div class="cardContainer col-lg-5 col-md-5 col-sm-10 skillsCard">
           <div class="row">
             <div class="card-body">
+              <div id="skills-header">
               <h2>Hard Skills</h2>
+              </div>
               <div class="card-body-content">
                 <div class="card-column-left">
                   <p class="card-text">HTML</p>
@@ -127,7 +131,9 @@
     <div class="row aboutRow">
         <div class="cardContainer col-lg-5 col-md-5 col-sm-10">
             <div class="card-body">
+              <div id="about-header">
               <h2>About Me</h2>
+              </div>
               <p class="card-text">I am very good at making websites.</p>
             </div>
           </div>
